# jd-parser-demo

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  conftest.py  docker-compose.yml  entry.py  pyproject.toml  requirements.txt
apps/: routes.py
apps/hr/: routes.py
apps/hr/endpoints/: parse_jd.py
apps/hr/services/: jd_parser.py
apps/hr/tests/: test_parse_jd_api.py  test_parse_jd_services.py
conf/: __init__.py  base.py  deploy.py  local.py  test.py
libs/clients/llm/: __init__.py  openai.py  protocol.py
libs/logging/: logger.py
