[project]
name = "jd-parser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
classifiers = [ "Programming Language :: Python :: 3 :: Only", "Programming Language :: Python :: 3.13" ]
dependencies = [
  "fastapi[standard]>=0.124.2",
  "loguru>=0.7",
  "openai>=2.9",
  "pydantic-settings>=2.12",
  "pytest>=9.0.2",
  "pytest-asyncio>=1.3",
]

[tool.ruff]
target-version = "py313"
line-length = 100

lint.select = [
  "E", # pycodestyle errors
  "F", # pyflakes
  "I", # import sorting
]
lint.ignore = [  ]

[tool.uv]
dev-dependencies = [
  "ruff>=0.7.0",
]
